Fixed issue where navbar stretched according to max containter width for family tree.

--- a/timeline/src/App.css
+++ b/timeline/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  display: table;
+  display:table;
   width: 100%;
   height: 100%;;
 }
@@ -337,9 +337,9 @@ input[type=checkbox]:checked ~ label > img {
   font-family: 'Times New Roman', Times, serif;
 }
 .navbar-header {
-  border: #94a0b4;
-  display:table-row;
-  width:parent;
+  position:relative !important;
+  top:0;
+  width:1450px;
 }
 
 #scroll {
